--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -4,8 +4,8 @@
     "description": "Browser toolbar calculator, including arithmetic, exponents, trigonometry, and logarithms, respecting the order of operations.",
     "version": "1.0",
     "icons": {
-        "48": "icon.png",
-        "96": "icon.png"
+        "48": "icon_48.png",
+        "96": "icon_96.png"
     },
     "browser_action": {
         "default_popup": "popup.html",
