--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
-    "name": "Better Calculator Extension",
+    "name": "Better Calculator",
     "description": "Browser toolbar calculator, including arithmetic, exponents, trigonometry, and logarithms, respecting the order of operations.",
-    "version": "1.0",
+    "version": "1.1",
     "icons": {
         "48": "icon_48.png",
         "96": "icon_96.png"
@@ -10,9 +10,5 @@
     "browser_action": {
         "default_popup": "popup.html",
         "default_title": "Better Calculator"
-    },
-    "permissions": [
-        "storage",
-        "tabs"
-    ]
+    }
 }
